--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -20,3 +20,24 @@
 .App-link {
   color: #09d3ac;
 }
+
+.user-img{
+  width: 50%;
+  align-self: center;
+  margin-top: 4%;
+}
+
+.card-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+ 
+}
+
+.cards {
+margin-bottom: 5%;
+
+}
